Comments and corrections.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!doctype html>
+<!-- 
+Main HTML file (i.e. home) for ng-slide, an AngularJS slideshow
+Uses Angular controllers to pull in the necessary sections.
+Martin Berlove
+4/28/2016 
+-->
 <html ng-app="ngslide">
 	<head>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
-		<script src="nguploader.js"></script>
 		<script src="scripts.js"></script>
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
